# test_optimization

./: .gitignore  CUDA_PLUGIN_COMPILATION_REPORT.md  OpenMM沒有CMakeConfig文件說明.md  OpenMM編譯問題解決方案.md  PLUGIN_ANALYSIS_REPORT.md  PLUGIN_EQUIVALENCE_FIXES.md  REFACTORING_SUMMARY.md  environment.yml  quick_plugin_test.py  readme.md  refactoring_summary.md  test_cuda_plugin.py  test_plugin.py  test_plugin_conductor_scaling.py  test_plugin_fallback.py  test_plugin_loading.py  verify_openmm_installation.sh
BMIM_BF4_HOH/: CRITICAL_BUG_FOUND.md  LINUS_REFACTORING_COMPLETED.md  OPTIMIZATION_SUMMARY.md  README.md  VERIFICATION_REPORT.md  bench.py  config.ini  demo_delayed_warmstart.py  run.sh  run_openMM.py  test_profiling_config.ini  test_warm_start.py  test_warm_start_simple.py
BMIM_BF4_HOH/about_warmstart/: demo_adaptive_warmstart.py
BMIM_BF4_HOH/ffdir/: sapt_noDB_2sheets.xml
BMIM_BF4_HOH/lib/: Fixed_Voltage_routines.py  Fixed_Voltage_routines_CYTHON.py  MM_classes.py  MM_classes_CYTHON.py  electrode_charges_cython.c  electrode_charges_cython.pyx  setup_cython.py
BMIM_BF4_HOH/lib/__pycache__/: Fixed_Voltage_routines.compute_image_charge_contribution_kahan-92.py313.1.nbc  MM_classes.batch_charge_update_anode-42.py313.1.nbc  MM_classes.batch_charge_update_anode-42.py313.nbi  MM_classes.batch_charge_update_anode-43.py313.nbi  MM_classes.batch_charge_update_cathode-20.py313.1.nbc  MM_classes.batch_charge_update_cathode-21.py313.nbi
BMIM_BF4_HOH/plugins/: readme.md
BMIM_BF4_HOH/some_debugging_record/about_Particle coordinate is NaN/: HOW_TO_USE_ANTI_EXPLOSION.md
OpenMM-ConstantV(original)/: lastFrame.py  run.sh  run_openMM.py
OpenMM-ConstantV(original)/analysis_scripts/: Poisson_pzc.ipynb  rdf_Ctfsi_cathode_exclusion.py
OpenMM-ConstantV(original)/example_grp_cnts/lib/: MM_classes_FV.py
OpenMM-ConstantV(original)/example_grp_cnts/test_3cnt/: 0V.sh  10mV.sh  1V.sh  500mV.sh  lastFrame.py  run_MC.sh  run_MC_eq.sh  run_openMM.py  run_openMM_0.py  sapt_add.xml
OpenMM-ConstantV(original)/ffdir/: graph_c_freeze.xml  graph_residue_c.xml
openMM_constant_V_beta/: ALGORITHM_CONSISTENCY_VERIFICATION.md  CYTHON_OPTIMIZATION_REPORT.md  FINAL_AUDIT_REPORT.md  FINAL_VERIFICATION_REPORT.md  LINUS_OPTIMIZED_POISSON_SOLVER.md  LINUS_REFACTORING_COMPLETED.md  P3_P8_FIX_REPORT.md  P7_NANOTUBE_OPTIMIZATION_GUIDE.md  REFACTORING_SUMMARY.md  Readme  WARMSTART_REMOVAL_REPORT.md  basic_information.ipynb  config.ini  config.ini.simple  config_refactored.ini  config_test.ini  run_openMM.py  run_openMM_refactored.py
openMM_constant_V_beta/4v_20ns/: FV_NVT.dcd
openMM_constant_V_beta/about_warmstart/: test_warm_start_accuracy.py
openMM_constant_V_beta/beta_ver_backup/: run_openMM_simple.py
openMM_constant_V_beta/ffdir/: sapt_addfunc.xml
openMM_constant_V_beta/lib/: Fixed_Voltage_routines_CYTHON.py  Fixed_Voltage_routines_OPTIMIZED.py  MM_classes.py  MM_classes_CYTHON.py  MM_classes_CYTHON.py.before_opt  MM_classes_CYTHON.py.with_warmstart  MM_classes_OPTIMIZED.py  compile_cython.sh  electrode_charges_cython.pyx  setup_cython.py
openMM_constant_V_beta/lib/__pycache__/: Fixed_Voltage_routines.compute_image_charge_contribution_kahan-92.py313.nbi  MM_classes.batch_charge_update_anode-43.py313.1.nbc  MM_classes.batch_charge_update_cathode-20.py313.nbi  (+1 more)
openMM_constant_V_beta/some_debugging_record/: CYTHON_FINAL_CHECKLIST.md  profile_bottleneck.py
openMM_constant_V_beta/tmp_bench/: config_original.ini  config_plugin.ini
other/Key points Markdown/: NEXT_STEP_OPENMM_PLUGIN.md
other/history/: LINUS_REFACTORING_UNIFIED_LOOP.md  config_simple_test.ini  config_test_short.ini  final_refactoring_summary.md  refactoring_summary.md  simplification_plan.md
other/testing/: refactoring_complete_report.md  test_cpu_vs_cuda_poisson.py  test_kernel_correctness.py  test_plugin.py  test_refactored_compilation.py  test_refactored_plugin.py  完成OpenMM安裝步驟.md
plugins/ElectrodeChargePlugin/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists_TEMPLATE.txt  CUDA_IMPLEMENTATION_COMPLETE.md  GPU_RESIDENT_COMPLETE.md  LINUS_PLUGIN_IMPLEMENTATION.md  LINUS_REFACTORING_SUMMARY.md  OPTIMIZATION_COMPLETE.md  README.md  REFACTORING_PLAN.md  test_force_groups.cpp
plugins/ElectrodeChargePlugin/cmake/: SetupOpenMM.cmake
plugins/ElectrodeChargePlugin/openmmapi/include/: ElectrodeChargeForce.h  ElectrodeChargeKernels.h
plugins/ElectrodeChargePlugin/openmmapi/include/internal/: ElectrodeChargeForceImpl.h
plugins/ElectrodeChargePlugin/openmmapi/src/: ElectrodeChargeForce.cpp
plugins/ElectrodeChargePlugin/openmmapi/src/internal/: ElectrodeChargeForceImpl.cpp  ElectrodeChargeForceImpl.cpp.ORIGINAL  ElectrodeChargeForceImpl.h
plugins/ElectrodeChargePlugin/python/: CMakeLists.txt  electrodecharge.i
plugins/ElectrodeChargePlugin/tests/: profile_cuda_kernel.py  test_charge_conservation.py  test_comprehensive_validation.py  test_cuda_loading.py  test_cuda_vs_reference.py  test_iteration_impact.py  test_large_system_performance.py  test_reference_kernel.py  test_simple_charges.py  test_vs_python_reference.py
(+13 files in other folders)
